
- New status bar -
The Forge version and digital clock have been moved to a new thin status bar to make room for the new Forge button.
Status messages that used to display on the right side of the old menu bar will now display in place of the version on the left side of the status bar.
F12 and Forge > Layout > View > Status Bar will allow hiding this status bar.
Both titlebar and status bar visibility will now be remembered between sessions.

- Forge now requires Java 7 -
Please update your Java runtime environment. At this point Forge versions 1.4.2 and above will no longer run under Java 6. Those who are using Mac OS should install the JDK version rather than the JRE version.


- The Mac OS X application -
At this time Forge now requires Java 7 and will no longer run under Java 6.

Unfortunately, the Mac OS X builder that we were using does not support Java 7. We hope to find and to use a different Mac OS X builder in order to continue releasing a Mac OS bundled application like we have in the past.

Currently, the windows/unix release of Forge includes a launcher file named "forge.command". Double click on the "forge.command" launcher command file and this will in turn launch the Forge jar file via the terminal application while increasing the Java heap space. This should be a temporary inconvenience.


---------
New Cards
---------




------------
Known Issues
------------

Several people have noticed that the cards displayed on the battlefield will fail to be displayed when the number of cards on the battlefield increases. Maximizing the human panel can help to re-display the cards.

Some time was spent turning the static ETB triggers into the proper ETB replacement effects they should be, mainly to interact correctly with each other. This work is not yet finished. As a result there is currently some inconsistencies with "Enters the battlefield with counters" (Not incredibly noticeable).
